--- a/exim/exim_selinux.8
+++ b/exim/exim_selinux.8
@@ -42,6 +42,14 @@ SELinux policy is customizable based on least access required.  exim policy is e
 
 
 .PP
+If you want to allow users to resolve user passwd entries directly from ldap rather then using a sssd server, you must turn on the authlogin_nsswitch_use_ldap boolean. Disabled by default.
+
+.EX
+.B setsebool -P authlogin_nsswitch_use_ldap 1
+
+.EE
+
+.PP
 If you want to deny any process from ptracing or debugging any other processes, you must turn on the deny_ptrace boolean. Disabled by default.
 
 .EX
@@ -81,6 +89,46 @@ If you want to enable reading of urandom for all domains, you must turn on the g
 
 .EE
 
+.PP
+If you want to allow confined applications to run with kerberos, you must turn on the kerberos_enabled boolean. Enabled by default.
+
+.EX
+.B setsebool -P kerberos_enabled 1
+
+.EE
+
+.PP
+If you want to allow system to run with NIS, you must turn on the nis_enabled boolean. Disabled by default.
+
+.EX
+.B setsebool -P nis_enabled 1
+
+.EE
+
+.PP
+If you want to allow confined applications to use nscd shared memory, you must turn on the nscd_use_shm boolean. Enabled by default.
+
+.EX
+.B setsebool -P nscd_use_shm 1
+
+.EE
+
+.SH NSSWITCH DOMAIN
+
+.PP
+If you want to allow users to resolve user passwd entries directly from ldap rather then using a sssd server for the exim_t, you must turn on the authlogin_nsswitch_use_ldap boolean.
+
+.EX
+.B setsebool -P authlogin_nsswitch_use_ldap 1
+.EE
+
+.PP
+If you want to allow confined applications to run with kerberos for the exim_t, you must turn on the kerberos_enabled boolean.
+
+.EX
+.B setsebool -P kerberos_enabled 1
+.EE
+
 .SH FILE CONTEXTS
 SELinux requires files to have an extended attribute to define the file type.
 .PP
@@ -111,6 +159,22 @@ Note: SELinux often uses regular expressions to specify labels that match multip
 .EE
 
 - Set files with the exim_exec_t type, if you want to transition an executable to the exim_t domain.
+
+
+.EX
+.PP
+.B exim_log_t
+.EE
+
+- Set files with the exim_log_t type, if you want to treat the data as exim log data, usually stored under the /var/log directory.
+
+
+.EX
+.PP
+.B exim_unit_file_t
+.EE
+
+- Set files with the exim_unit_file_t type, if you want to treat the files as exim unit content.
 
 
 .PP
